vlib/v/checker/tests/multi_return_err.out
vlib/v/checker/tests/multi_return_err.vv:10:10: error: cannot use `f64` as `int` in argument 2 to `my_func` from (int, f64)
    8 | 
    9 | fn main() {
   10 |     my_func(my_func2())
      |             ~~~~~~~~~~
   11 |     my_func3(my_func2(), 'foo')
   12 |     my_func4('foo', my_func2())
vlib/v/checker/tests/multi_return_err.vv:11:11: error: cannot use `f64` as `int` in argument 2 to `my_func3` from (int, f64)
    9 | fn main() {
   10 |     my_func(my_func2())
   11 |     my_func3(my_func2(), 'foo')
      |              ~~~~~~~~~~
   12 |     my_func4('foo', my_func2())
   13 | }
vlib/v/checker/tests/multi_return_err.vv:12:18: error: cannot use `f64` as `int` in argument 3 to `my_func4` from (int, f64)
   10 |     my_func(my_func2())
   11 |     my_func3(my_func2(), 'foo')
   12 |     my_func4('foo', my_func2())
      |                     ~~~~~~~~~~
   13 | }
